# libcintelhex

./: .gitignore  .travis.yml  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  configure.in
include/: Makefile.am  cintelhex.h
src/: Makefile.am  ihex_copy.c  ihex_parse.c  ihex_record.c
tests/: .gitignore  Makefile  Makefile.am  Makefile.in  test  test_copy.c  test_main.c  test_parse.c  test_record.c
tests/res/: big-a.hex
