#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([libcintelhex], [1.0], [martin.helmich@hs-osnabrueck.de])
AC_CONFIG_SRCDIR([src/ihex_parse.c])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MKDIR_P

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_UINT8_T
AC_TYPE_UINT16_T

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
